# openai_audio_translator

./: .gitignore  README.md
api/: main.py  pyproject.toml
api/dependencies/: ai_helper.py  converter.py  poc.py  video_helper.py
api/dto/: requests.py
api/exceptions/: custom_exception.py
api/resources/: prompt.py  transcribe.py  translate.py
api/util/: about.py  env_config.py
py_poc/: .gitignore  main.py  pyproject.toml
py_poc/dependencies/: translate_helper.py
py_poc/util/: helper.py
ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.scss  App.tsx  index.scss  main.tsx
ui/src/components/: GradientCircularProgress.tsx  OpenAISVG.tsx  TextEditor.tsx  YoutubeVideoInputForm.tsx
ui/src/services/: AppContext.tsx  AudioApi.ts  AudioApiInstance.ts
ui/src/styles/: variables.scss
ui/src/util/: envConfig.ts
ui/src/views/: EnglishEditorScreen.tsx  HindiEditorScreen.tsx  YoutubeVideoInputForm.tsx
